--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <header class="header">
-      <a href="">link</a>
+      <a href="./index.html">link</a>
       <p>
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor maiores
         dolores, hic accusantium perspiciatis soluta nihil aliquam voluptatum
