--- a/index.html
+++ b/index.html
@@ -17,5 +17,14 @@
         exercitationem ducimus.
       </p>
     </header>
+    <main></main>
+    <footer>
+      <p class="footer-color">
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Id a non
+        libero, assumenda ratione laboriosam, quod eveniet mollitia aliquam
+        dolor tempore tempora consequuntur fuga? Corporis ducimus optio minus
+        suscipit voluptatibus?
+      </p>
+    </footer>
   </body>
 </html>
