--- a/index.html
+++ b/index.html
@@ -17,5 +17,11 @@
         exercitationem ducimus.
       </p>
     </header>
+    <main>
+      <section class="hero">
+        <h1>Lorem ipsum dolor sit.</h1>
+        <button>text</button>
+      </section>
+    </main>
   </body>
 </html>
