--- a/index.html
+++ b/index.html
@@ -22,6 +22,17 @@
         <h1>Lorem ipsum dolor sit.</h1>
         <button>text</button>
       </section>
+      <section class="products">
+        <div>
+          <img src="" alt="" width="400" />
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Obcaecati
+            maxime doloremque non aperiam nam delectus, tempore fuga assumenda
+            aspernatur, id at doloribus natus culpa molestias facere magni vitae
+            a odit.
+          </p>
+        </div>
+      </section>
     </main>
     <footer>
       <p class="footer-color">
